<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/custoServico"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editarNome"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pergunta"
        app:layout_constraintTop_toBottomOf="@id/custoServico"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/botaogrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/botaoAmazing"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pergunta">


    <RadioButton
        android:id="@+id/botaoAmazing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao1" />

    <RadioButton
        android:id="@+id/botaoGood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao2" />

    <RadioButton
        android:id="@+id/botaoOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao3"/>
    </RadioGroup>

    <Button
        android:id="@+id/botaoCalcular"
        android:layout_width="364dp"
        android:layout_height="53dp"
        android:text="@string/botaoCal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Switch" />

    <Switch
        android:id="@+id/Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/botaozin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaogrupo"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="113dp"
        android:layout_height="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaoCalcular"
        tools:text="Tip Amount: $10" />

</androidx.constraintlayout.widget.ConstraintLayout>